updating instructions file and code

--- a/src/main/resources/templates/sample.html
+++ b/src/main/resources/templates/sample.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>Index</title>
+    <title>Title</title>
     <th:block th:insert="base :: header"></th:block>
 </head>
 <body>
 
     <div th:replace="base :: navlinks"></div>
 
-    <h2>Insecure Page</h2>
-
+    <!--New page content goes here-->
 </body>
 </html>
