--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
-    <title>Spring Security Example</title>
+    <title>Login</title>
+    <th:block th:insert="base :: header"></th:block>
 </head>
 <body>
+
+    <div th:replace="base :: navlinks"></div>
+
     <div th:if="${param.error}">
         Invalid username and password.
     </div>
@@ -20,5 +23,6 @@
         </div>
         <div><input type="submit" value="Sign In"/></div>
     </form>
+
 </body>
 </html>
