--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Spring Security Example</title>
+    <title>Register</title>
+    <th:block th:insert="base :: header"></th:block>
 </head>
 <body>
-    <h4>New User Registration</h4>
+
+    <div th:replace="base :: navlinks"></div>
+
+    <h2>New User Registration</h2>
 
     <form autocomplete="off" action="#" th:action="@{/register}" th:object="${user}" method="post">
         First Name
@@ -46,5 +48,6 @@
         <input type="text" id="password" placeholder="Password" th:field="*{password}"/><br/>
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
+
 </body>
 </html>
