continue at home

--- a/src/main/resources/templates/HelloWorld.html
+++ b/src/main/resources/templates/HelloWorld.html
@@ -5,6 +5,23 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Season</th>
+                    <th>Color</th>
+                    <th>Material</th>
+                    <th>image</th>
+                    <th>Category</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
