--- a/src/main/resources/templates/HelloWorld.html
+++ b/src/main/resources/templates/HelloWorld.html
@@ -6,22 +6,28 @@
 </head>
 <body>
     <div class="container">
-        <table>
-            <thead>
-                <tr>
-                    <th>Season</th>
-                    <th>Color</th>
-                    <th>Material</th>
-                    <th>image</th>
-                    <th>Category</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
+        <div>
+            <h2 th:text="${user.username}"></h2>
+            <div>
+                <span>
+                    <strong>Season</strong> |
+                    <strong>Color</strong> |
+                    <strong>Material</strong> |
+                    <strong>image</strong> |
+                    <strong>Category</strong>
+                </span>
+            </div>
+            <div  th:each="closet : ${closets}">
+                <th:block>
+                    <ul th:each="top : ${closet.tops}">
+                        <li th:text="${top.category}"></li>
+                        <li th:text="${top.color}"></li>
+                        <li th:text="${top.material}"></li>
+                        <li th:text="${top.size}"></li>
+                    </ul>
+                </th:block>
+            </div>
+        </div>
     </div>
 </body>
 </html>
