--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -20,6 +20,12 @@
                         <a class="nav-link" href="/secure">Login</a>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" href="/listclosets">List My Closets</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" href="/addcloset">Add New Closet</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link" href="/logout">Log Out</a>
                     </li>
                 </ul>
