show.html changes

--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -21,6 +21,7 @@
             <th>Size</th>
             <th>Season</th>
             <th>Image</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -53,6 +54,7 @@
             <th>Size</th>
             <th>Season</th>
             <th>Image</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -85,6 +87,7 @@
             <th>Size</th>
             <th>Season</th>
             <th>Image</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -116,6 +119,7 @@
             <th>Size</th>
             <th>Season</th>
             <th>Image</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -147,6 +151,7 @@
             <th>Size</th>
             <th>Season</th>
             <th>Image</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
