--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -6,7 +6,8 @@
 
 </head>
 <body>
-<div><h2>Welcome [[${user.firstName}]] [[${user.lastName}]] </h2></div></br>
+<div><h2>Welcome [[${user.firstName}]] [[${user.lastName}]] </h2></div>
+</br>
 <div th:replace="base :: navlinks"></div>
 
 
@@ -30,10 +31,10 @@
             <td th:text="${top.material}"></td>
             <td th:text="${top.size}"></td>
             <td th:text="${top.season}"></td>
-            <img th:src="${top.imgUrl}">
+            <td><img th:src="${top.imgUrl}" height="400" width="400"/></td>
             <td>
                 <div class="nav-item">
-                    <span >
+                    <span>
                     <a th:href="@{/update/{id}(id=${top.id})}">Update</a>
                     <a th:href="@{/delete/{id}(id=${top.id})}">Delete</a>
                 </span>
@@ -65,7 +66,7 @@
             <td th:text="${jacket.season}"></td>
             <img th:src="${jacket.imgUrl}">
             <td>
-                <div class="nav-item" >
+                <div class="nav-item">
                     <span>
                     <a th:href="@{/update/{id}(id=${jacket.id})}">Update</a>
                     <a th:href="@{/delete/{id}(id=${jacket.id})}">Delete</a>
@@ -131,7 +132,7 @@
             <img th:src="${footwear.imgUrl}">
             <td>
                 <div class="nav-item">
-                    <span >
+                    <span>
                     <a th:href="@{/update/{id}(id=${footwear.id})}">Update</a>
                     <a th:href="@{/delete/{id}(id=${footwear.id})}">Delete</a>
                 </span>
@@ -176,6 +177,15 @@
 <h2><a th:href="@{/delete/{id}(id=${closet.id})}">Delete this closet</a></h2>
 
 </p>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
