--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -31,7 +31,7 @@
             <td th:text="${top.material}"></td>
             <td th:text="${top.size}"></td>
             <td th:text="${top.season}"></td>
-            <td><img th:src="${top.imgUrl}" height="400" width="400"/></td>
+            <td><img th:src="${top.imgUrl}" height="50" width="50"/></td>
             <td>
                 <div class="nav-item">
                     <span>
@@ -64,7 +64,8 @@
             <td th:text="${jacket.material}"></td>
             <td th:text="${jacket.size}"></td>
             <td th:text="${jacket.season}"></td>
-            <img th:src="${jacket.imgUrl}">
+            <td><img th:src="${jacket.imgUrl}" height="50" width="50"/></td>
+            <!--<img th:src="${jacket.imgUrl}">-->
             <td>
                 <div class="nav-item">
                     <span>
@@ -97,7 +98,8 @@
             <td th:text="${bottom.material}"></td>
             <td th:text="${bottom.size}"></td>
             <td th:text="${bottom.season}"></td>
-            <img th:src="${bottom.imgUrl}">
+            <td><img th:src="${bottom.imgUrl}" height="50" width="50"/></td>
+            <!--<img th:src="${bottom.imgUrl}">-->
             <td>
                 <div class="nav-item">
                     <span>
@@ -129,7 +131,8 @@
             <td th:text="${footwear.material}"></td>
             <td th:text="${footwear.size}"></td>
             <td th:text="${footwear.season}"></td>
-            <img th:src="${footwear.imgUrl}">
+            <td><img th:src="${footwear.imgUrl}" height="50" width="50"/></td>
+            <!--<img th:src="${footwear.imgUrl}">-->
             <td>
                 <div class="nav-item">
                     <span>
@@ -161,7 +164,8 @@
             <td th:text="${accessory.material}"></td>
             <td th:text="${accessory.size}"></td>
             <td th:text="${accessory.season}"></td>
-            <img th:src="${accessory.imgUrl}">
+            <td><img th:src="${accessory.imgUrl}" height="50" width="50"/></td>
+            <!--<img th:src="${accessory.imgUrl}">-->
             <td>
                 <div class="nav-item">
                     <span>
