--- a/src/main/resources/templates/closetlist.html
+++ b/src/main/resources/templates/closetlist.html
@@ -20,7 +20,7 @@
         <td>
             <a th:href="@{/update/{id}(id=${closet.id})}">Update</a>
             <a th:href="@{/detail/{id}(id=${closet.id})}">Details</a>
-            <a th:href="@{/delete/{id}(id=${closet.id})}">Delete</a>
+            <!--<a th:href="@{/delete/{id}(id=${closet.id})}">Delete</a>-->
         </td>
     </tr>
     </tbody>
