--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -36,7 +36,7 @@
                 <div class="nav-item">
                     <span>
                     <a th:href="@{/update/{id}(id=${top.id})}">Update</a>
-                    <a th:href="@{/delete/{id}(id=${top.id})}">Delete</a>
+                    <a th:href="@{/deletetop/{id}(id=${top.id})}">Delete</a>
                 </span>
                 </div>
 
@@ -70,7 +70,7 @@
                 <div class="nav-item">
                     <span>
                     <a th:href="@{/update/{id}(id=${jacket.id})}">Update</a>
-                    <a th:href="@{/delete/{id}(id=${jacket.id})}">Delete</a>
+                    <a th:href="@{/deletejacket/{id}(id=${jacket.id})}">Delete</a>
                 </span>
                 </div>
 
@@ -104,7 +104,7 @@
                 <div class="nav-item">
                     <span>
                     <a th:href="@{/update/{id}(id=${bottom.id})}">Update</a>
-                    <a th:href="@{/delete/{id}(id=${bottom.id})}">Delete</a>
+                    <a th:href="@{/deletebottom/{id}(id=${bottom.id})}">Delete</a>
                 </span>
                 </div>
         </tr>
@@ -137,7 +137,7 @@
                 <div class="nav-item">
                     <span>
                     <a th:href="@{/update/{id}(id=${footwear.id})}">Update</a>
-                    <a th:href="@{/delete/{id}(id=${footwear.id})}">Delete</a>
+                    <a th:href="@{/deletefootwear/{id}(id=${footwear.id})}">Delete</a>
                 </span>
                 </div>
         </tr>
@@ -170,7 +170,7 @@
                 <div class="nav-item">
                     <span>
                     <a th:href="@{/update/{id}(id=${accessory.id})}">Update</a>
-                    <a th:href="@{/delete/{id}(id=${accessory.id})}">Delete</a>
+                    <a th:href="@{/deleteaccessory/{id}(id=${accessory.id})}">Delete</a>
                 </span>
                 </div>
         </tr>
