--- a/src/main/resources/templates/topform.html
+++ b/src/main/resources/templates/topform.html
@@ -28,8 +28,11 @@
         Size: <input type="text" th:field="*{size}" />
         <span th:if="${#fields.hasErrors('size')}" th:errors="*{size}"></span> <br/>
 
-        <!--Sleeves: <input type="text" th:field="*{sleeves}" />-->
-        <!--<span th:if="${#fields.hasErrors('sleeves')}" th:errors="*{sleeves}"></span> <br/>-->
+
+        Sleeves: <select th:field="*{sleeves}">
+            <option th:value="'Long'"  th:text="Long"></option>
+            <option th:value="'short'" th:text="Short"></option>
+        </select>
 
         <select th:field="*{season}">
             <option th:value="'Spring'" th:text="Spring"></option>
