--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -11,9 +11,6 @@
 <div th:fragment="navlinks">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark mb-3">
         <ul class="navbar-nav">
-            <li class="nav-item" sec:authorize="isAuthenticated()">
-                <a class="nav-link" href="/">Home</a>
-            </li>
             <li class="nav-item" sec:authorize="isAnonymous()">
                 <a class="nav-link" href="/register">Register</a>
             </li>
@@ -21,7 +18,7 @@
                 <a class="nav-link" href="/secure">Login</a>
             </li>
             <li class="nav-item" sec:authorize="isAuthenticated()">
-                <a class="nav-link" href="/listclosets">List My Closets</a>
+                <a class="nav-link" href="/">List My Closets</a>
             </li>
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link" href="/addcloset">Add New Closet</a>
