--- a/src/main/resources/templates/currentWeather.html
+++ b/src/main/resources/templates/currentWeather.html
@@ -10,7 +10,7 @@
     -->
 
 <head>
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <script type="text/javascript">
         // Configure our weather widget during jQuery.OnReady
@@ -22,7 +22,7 @@
             var language = "en";
             // Contact AccuWeather to get an official key. They key in this
             // example is temporary and should NOT be used it in production.
-            var apiKey = "doctorstrange";
+            var apiKey = "DoctorStrange";
             var awxClearMessages = function() {
                 $("#awxLocationInfo").html("...");
                 $("#awxLocationUrl").html("...");
