--- a/src/main/resources/templates/closetlist.html
+++ b/src/main/resources/templates/closetlist.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div th:replace="base :: navlinks"></div>
-
+<h2 id="demoDay"></h2>
 <table class="table">
     <tr>
         <th>Closet Name</th>
@@ -25,6 +25,6 @@
     </tr>
     </tbody>
 </table>
-<div th:replace="nav :: bootstrap-js"></div>
+<div th:replace="base :: bootstrap-js"></div>
 </body>
 </html>
