--- a/src/main/resources/templates/footwearform.html
+++ b/src/main/resources/templates/footwearform.html
@@ -26,6 +26,11 @@
         Size: <input type="text" th:field="*{size}" />
         <span th:if="${#fields.hasErrors('size')}" th:errors="*{size}"></span> <br/>
 
+        Category: <select th:field="*{category}">
+        <option th:value="'formal'"  th:text="Formal"></option>
+        <option th:value="'informal'" th:text="Informal"></option>
+        </select>
+
         <select th:field="*{season}">
             <option th:value="'Spring'" th:text="Spring"></option>
             <option th:value="'Summer'" th:text="Summer"></option>
