--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -21,6 +21,7 @@
             <th>Material</th>
             <th>Size</th>
             <th>Season</th>
+            <th>Category</th>
             <th>Image</th>
             <th>Actions</th>
         </tr>
@@ -30,12 +31,13 @@
             <td th:text="${top.color}"></td>
             <td th:text="${top.material}"></td>
             <td th:text="${top.size}"></td>
+            <td th:text="${top.category}"></td>
             <td th:text="${top.season}"></td>
             <td><img th:src="${top.imgUrl}" height="50" width="50"/></td>
             <td>
                 <div class="nav-item">
                     <span>
-                    <a th:href="@{/update/{id}(id=${top.id})}">Update</a>
+                    <a th:href="@{/updatetop/{id}(id=${top.id})}">Update</a>
                     <a th:href="@{/deletetop/{id}(id=${top.id})}">Delete</a>
                 </span>
                 </div>
@@ -54,6 +56,7 @@
             <th>Material</th>
             <th>Size</th>
             <th>Season</th>
+            <th>Category</th>
             <th>Image</th>
             <th>Actions</th>
         </tr>
@@ -64,8 +67,8 @@
             <td th:text="${jacket.material}"></td>
             <td th:text="${jacket.size}"></td>
             <td th:text="${jacket.season}"></td>
+            <td th:text="${jacket.category}"></td>
             <td><img th:src="${jacket.imgUrl}" height="50" width="50"/></td>
-            <!--<img th:src="${jacket.imgUrl}">-->
             <td>
                 <div class="nav-item">
                     <span>
@@ -88,6 +91,7 @@
             <th>Material</th>
             <th>Size</th>
             <th>Season</th>
+            <th>Category</th>
             <th>Image</th>
             <th>Actions</th>
         </tr>
@@ -98,8 +102,8 @@
             <td th:text="${bottom.material}"></td>
             <td th:text="${bottom.size}"></td>
             <td th:text="${bottom.season}"></td>
+            <td th:text="${bottom.category}"></td>
             <td><img th:src="${bottom.imgUrl}" height="50" width="50"/></td>
-            <!--<img th:src="${bottom.imgUrl}">-->
             <td>
                 <div class="nav-item">
                     <span>
@@ -121,6 +125,7 @@
             <th>Material</th>
             <th>Size</th>
             <th>Season</th>
+            <th>Category</th>
             <th>Image</th>
             <th>Actions</th>
         </tr>
@@ -131,8 +136,9 @@
             <td th:text="${footwear.material}"></td>
             <td th:text="${footwear.size}"></td>
             <td th:text="${footwear.season}"></td>
+            <td th:text="${footwear.category}"></td>
             <td><img th:src="${footwear.imgUrl}" height="50" width="50"/></td>
-            <!--<img th:src="${footwear.imgUrl}">-->
+
             <td>
                 <div class="nav-item">
                     <span>
@@ -154,6 +160,7 @@
             <th>Material</th>
             <th>Size</th>
             <th>Season</th>
+            <th>Category</th>
             <th>Image</th>
             <th>Actions</th>
         </tr>
@@ -164,8 +171,8 @@
             <td th:text="${accessory.material}"></td>
             <td th:text="${accessory.size}"></td>
             <td th:text="${accessory.season}"></td>
+            <td th:text="${accessory.category}"></td>
             <td><img th:src="${accessory.imgUrl}" height="50" width="50"/></td>
-            <!--<img th:src="${accessory.imgUrl}">-->
             <td>
                 <div class="nav-item">
                     <span>
@@ -178,7 +185,7 @@
         </tbody>
     </table>
 </div>
-<h2><a th:href="@{/delete/{id}(id=${closet.id})}">Delete this closet</a></h2>
+<h5><a th:href="@{/delete/{id}(id=${closet.id})}">Delete this closet</a></h5>
 
 </p>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
