--- a/src/main/resources/templates/topform.html
+++ b/src/main/resources/templates/topform.html
@@ -34,6 +34,11 @@
             <option th:value="'short'" th:text="Short"></option>
         </select>
 
+        Category: <select th:field="*{category}">
+        <option th:value="'formal'"  th:text="Formal"></option>
+        <option th:value="'informal'" th:text="Informal"></option>
+        </select>
+
         <select th:field="*{season}">
             <option th:value="'Spring'" th:text="Spring"></option>
             <option th:value="'Summer'" th:text="Summer"></option>
